escapeverse/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: escapeverse-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: escapeverse-client
  template:
    metadata:
      labels:
        app: escapeverse-client
    spec:
      containers:
      - name: client
        image: amoghk04/ev-client:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: escapeverse-client
spec:
  selector:
    app: escapeverse-client
  ports:
  - port: 80
    targetPort: 5173
  type: LoadBalancer
