escapeverse/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: escapeverse-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: escapeverse-server
  template:
    metadata:
      labels:
        app: escapeverse-server
    spec:
      containers:
      - name: server
        image: amoghk04/ev-server:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
        - containerPort: 3002
          name: websocket
---
apiVersion: v1
kind: Service
metadata:
  name: escapeverse-server
spec:
  selector:
    app: escapeverse-server
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  - name: websocket
    port: 3002
    targetPort: 3002
  type: LoadBalancer
