escapeverse/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escapeverse-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # Add cache control headers
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
      add_header Pragma "no-cache";
      add_header Expires "0";
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ev-client
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: escapeverse-server
            port:
              number: 3001
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: escapeverse-server
            port:
              number: 3002
